NetBSD Problem Report #42906

From www@NetBSD.org  Mon Mar  1 19:29:59 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id F170863C37A
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  1 Mar 2010 19:29:58 +0000 (UTC)
Message-Id: <20100301192958.A200663C347@www.NetBSD.org>
Date: Mon,  1 Mar 2010 19:29:58 +0000 (UTC)
From: hbent@oberlin.edu
Reply-To: hbent@oberlin.edu
To: gnats-bugs@NetBSD.org
Subject: patches to add support for Intel G41 motherboard and video
X-Send-Pr-Version: www-1.0

>Number:         42906
>Category:       kern
>Synopsis:       patches to add support for Intel G41 motherboard and video
>Confidential:   no
>Severity:       non-critical
>Priority:       high
>Responsible:    riz
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Mar 01 19:30:00 +0000 2010
>Closed-Date:    Wed Jun 16 03:37:28 +0000 2010
>Last-Modified:  Wed Jun 16 03:40:02 +0000 2010
>Originator:     Henry Bent
>Release:        5.99.24
>Organization:
>Environment:
NetBSD aelfric 5.99.24 NetBSD 5.99.24 (AELFRIC_QUAD) #6: Mon Mar  1 13:11:39 EST 2010  root@aelfric:/usr/obj/src-current/sys/arch/i386/compile/AELFRIC_QUAD i386
>Description:
-current does not identify the Intel G41 chipset and as such doesn't provide proper AGP support for onboard video, nor proper support in i915drm.

>How-To-Repeat:
Boot -current on an Intel G41 chipset motherboard.  Note that xf86-video-intel does not work, as it needs AGP support.
>Fix:
Here are some patches to add the proper IDs, based on patches to netbsd-5 by Brad DuPlessis <bradd@cat.co.za>.

--- sys/arch/x86/pci/pchb.c.orig        2010-03-01 14:21:12.000000000 -0500
+++ sys/arch/x86/pci/pchb.c     2010-03-01 14:22:30.000000000 -0500
@@ -386,6 +386,7 @@
                case PCI_PRODUCT_INTEL_82IGD_E_HB:
                case PCI_PRODUCT_INTEL_82Q45_HB:
                case PCI_PRODUCT_INTEL_82G45_HB:
+               case PCI_PRODUCT_INTEL_82G41_HB:
                        /*
                         * The host bridge is either in GFX mode (internal
                         * graphics) or in AGP mode. In GFX mode, we pretend

--- sys/dev/pci/agp.c.orig      2010-03-01 14:24:24.000000000 -0500
+++ sys/dev/pci/agp.c   2010-03-01 14:25:55.000000000 -0500
@@ -192,6 +192,8 @@
          NULL,                 agp_i810_attach },
        { PCI_VENDOR_INTEL,     PCI_PRODUCT_INTEL_82G45_HB,
          NULL,                 agp_i810_attach },
+       { PCI_VENDOR_INTEL,     PCI_PRODUCT_INTEL_82G41_HB,
+         NULL,                 agp_i810_attach },
 #endif

 #if NAGP_INTEL > 0

--- sys/dev/pci/agp_i810.c.orig 2010-03-01 14:24:24.000000000 -0500
+++ sys/dev/pci/agp_i810.c      2010-03-01 14:26:48.000000000 -0500
@@ -191,6 +191,7 @@
        case PCI_PRODUCT_INTEL_82IGD_E_IGD:
        case PCI_PRODUCT_INTEL_82Q45_IGD:
        case PCI_PRODUCT_INTEL_82G45_IGD:
+       case PCI_PRODUCT_INTEL_82G41_IGD:
                return (1);
        }

@@ -299,6 +300,7 @@
        case PCI_PRODUCT_INTEL_82IGD_E_IGD:
        case PCI_PRODUCT_INTEL_82Q45_IGD:
        case PCI_PRODUCT_INTEL_82G45_IGD:
+       case PCI_PRODUCT_INTEL_82G41_IGD:
                isc->chiptype = CHIP_G4X;
                break;
        }

--- sys/dev/pci/pcidevs.orig    2010-03-01 14:24:24.000000000 -0500
+++ sys/dev/pci/pcidevs 2010-03-01 14:28:17.000000000 -0500
@@ -2708,6 +2708,8 @@
 product INTEL 82Q45_IGD                0x2e12  82Q45 Integrated Graphics Device
 product INTEL 82G45_HB         0x2e20  82G45 Host Bridge
 product INTEL 82G45_IGD                0x2e22  82G45 Integrated Graphics Device
+product INTEL 82G41_HB         0x2e30  82G41 Host Bridge
+product INTEL 82G41_IGD                0x2e32  82G41 Integrated Graphics Device
 product INTEL 31244            0x3200  31244 Serial ATA Controller
 product INTEL 82855PM_DDR      0x3340  82855PM MCH Host Controller
 product INTEL 82855PM_AGP      0x3341  82855PM Host-AGP Bridge

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->riz
Responsible-Changed-By: riz@NetBSD.org
Responsible-Changed-When: Tue, 15 Jun 2010 21:41:16 +0000
Responsible-Changed-Why:
I'll handle this.


From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42906 CVS commit: src/sys/dev/pci
Date: Wed, 16 Jun 2010 03:27:48 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Wed Jun 16 03:27:48 UTC 2010

 Modified Files:
 	src/sys/dev/pci: pcidevs

 Log Message:
 Add a bunch of Intel host bridge and integrated graphics device IDs,
 from the Linux Intel AGP driver and PR#42906 from Henry Bent.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1034 -r1.1035 src/sys/dev/pci/pcidevs

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: riz@NetBSD.org
State-Changed-When: Wed, 16 Jun 2010 03:37:28 +0000
State-Changed-Why:
Support was added.  Thanks!


From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42906 CVS commit: src/sys
Date: Wed, 16 Jun 2010 03:35:02 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Wed Jun 16 03:35:01 UTC 2010

 Modified Files:
 	src/sys/arch/x86/pci: pchb.c
 	src/sys/dev/pci: agp.c agp_i810.c

 Log Message:
 Add AGP support for a number of Intel onboard devices, including
 82G41, 82B43, E7221, 82965GME, and "Iron Lake".  Device
 types (i915, i965, G33, and G4X variants) from the Linux Intel AGP
 driver, and (for 82G41) from Henry Bent in PR#42906.

 There are a few more varieties that should be relatively low-hanging
 fruit ("Pineview" and "Sandy Bridge"), but will require a little bit
 of rejiggering of the "chiptype".

 OK mrg@


 To generate a diff of this commit:
 cvs rdiff -u -r1.21 -r1.22 src/sys/arch/x86/pci/pchb.c
 cvs rdiff -u -r1.68 -r1.69 src/sys/dev/pci/agp.c
 cvs rdiff -u -r1.67 -r1.68 src/sys/dev/pci/agp_i810.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.